# cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
config/: config.json
docs/: code_Style.md
include/: config.h  debug_macros.h  inc1.h  logging.h  version.h.in
scripts/: create_repo.ps1  create_repo.sh
src/: config.cpp  logging.cpp  main.cpp
test/: test_basic.cpp
